syntax = "proto3";
package coolcar;
option go_package="coolcar/proto/gen/go;trippb";

message Location{
    double latitude=1;
    double longitude=2;
}
enum TripStatus{
    TS_NOT_SPECIFIED=0;
    NOT_STARTED=1;
    IN_PROGRESS=2;
    FINISHED=3;
    PAID=4;
}

message Trip{
    string start =1;
    Location start_pos=5;   //如果已经上线，旧版本的序号已经确定。新版本序号只能只能增加，不能占用修改。
    repeated Location path_locations=7; //repeated 变量一般加 s,表示复数。
    string end =2;
    Location end_pos=6;
    int64 duration_sec=3;
    int64 fee_cent=4;
    TripStatus status=8;
    bool has_duration_sec=9;
}